--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<hi>Dog Adoption</hi>
+	<ul>
+		<li><a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg"</a></li></ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
